@@ -1099,19 +1099,15 @@ nsfont_draw (struct glyph_string *s, int from, int to, int x, int y,
           br.size.width -= 2*correction;
         }
 
-#if 0
       if (!s->face->stipple)
-#endif
         [(NS_FACE_BACKGROUND (face) != 0
           ? ns_lookup_indexed_color (NS_FACE_BACKGROUND (face), s->f)
           : FRAME_BACKGROUND_COLOR (s->f)) set];
-#if 0				/* This is tiling, not stippling.  */
       else
         {
           struct ns_display_info *dpyinfo = FRAME_NS_DISPLAY_INFO (s->f);
           [[dpyinfo->bitmaps[face->stipple-1].img stippleMask] set];
         }
-#endif
       NSRectFill (br);
     }
 
